# Test-task

./: CMakeLists.txt  Readme.md  planes.txt  requirements.txt  visualize.py
include/: geometry.h  points_processor.h  utils.h
src/: geometry.cpp  main.cpp  points_processor.cpp  utils.cpp
